--- a/com.rbac.web/src/main/webapp/WEB-INF/web.xml
+++ b/com.rbac.web/src/main/webapp/WEB-INF/web.xml
@@ -2,14 +2,14 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath*:spring/spring-*.xml</param-value>
+    <param-value>classpath*:spring-*.xml</param-value>
   </context-param>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
 
   <listener>
-    <listener-class>com.rbac.atcrowdfunding.web.ServerStartupListener</listener-class>
+    <listener-class>com.rbac.web.ServerStartupListener</listener-class>
   </listener>
 
   <filter>
@@ -35,7 +35,7 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:spring/springmvc-context.xml</param-value>
+      <param-value>classpath:springmvc-context.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
